js/js.translator/testData/incremental/invalidation/nestedClass/lib1/l1.0.kt
class MyClass {
    class NestedClass {
        inline fun foo() = 0
    }
}
